--- a/src/scss/block/cover.scss
+++ b/src/scss/block/cover.scss
@@ -68,7 +68,10 @@
 		.btn.drag {
 			.icon { background-image: url('~img/icon/cover/drag.svg'); }
 		}
-		
+
+		.btn.addIcon {
+			.icon { background-image: url('~img/icon/add/icon1.svg'); }
+		}
 		.btn.addCover {
 			.icon { background-image: url('~img/icon/add/cover1.svg'); }
 		}
