--- a/src/scss/component/iconObject.scss
+++ b/src/scss/component/iconObject.scss
@@ -3,7 +3,7 @@
 .iconObject { display: inline-block; vertical-align: top; position: relative; width: 20px; height: 20px; border-radius: 3px; }
 .iconObject {
 	.iconEmoji, .iconImage, .iconFile, .iconUser { width: 100%; height: 100%; transition: none; vertical-align: top; }
-	.iconImage { border-radius: 3px; background-size: cover; }
+	.iconImage { border-radius: inherit; background-size: cover; object-fit: cover; }
 
 	.smileImage.c18, .iconImage.c18, .iconFile.c18 { @include pos-abs-mid; width: 18px; height: 18px; margin: -9px 0px 0px -9px; }
 	.smileImage.c20, .iconImage.c20, .iconFile.c20 { @include pos-abs-mid; width: 20px; height: 20px; margin: -10px 0px 0px -10px; }
