--- a/src/scss/block/cover.scss
+++ b/src/scss/block/cover.scss
@@ -95,7 +95,7 @@
 
 	.block.blockCover.align0 {
 		.elements {
-			.buttons { left: 118px; }
+			.buttons { left: 116px; }
 			.btn.addIcon { display: none; }
 		}
 	}
@@ -109,7 +109,7 @@
 	}
 }
 
-.editorWrapper.isDataview {
+.editorWrapper.isSet {
 	.block.blockCover {
 		.elements { width: calc(100% - 144px); left: 72px; margin: 0px; }
 	}
