--- a/src/scss/component/iconObject.scss
+++ b/src/scss/component/iconObject.scss
@@ -117,8 +117,9 @@
 .iconUser.c20 { line-height: 20px; font-size: 12px; }
 .iconUser.c40 { line-height: 40px; font-size: 18px; }
 .iconUser.c48 { line-height: 48px; font-size: 18px; }
-.iconUser.c64 { line-height: 62px; font-size: 22px; font-weight: 500; }
-.iconUser.c96 { line-height: 96px; font-size: 44px; font-weight: 500; }
+.iconUser.c64 { line-height: 62px; font-size: 22px; }
+.iconUser.c96 { line-height: 96px; font-size: 44px; }
+.iconUser.c128 { line-height: 128px; font-size: 72px; }
 
 .iconUser.grey { background-color: $colorLightGrey; }
 .iconUser.black { background-color: $colorBlack; }
