--- a/src/scss/popup/editor/page.scss
+++ b/src/scss/popup/editor/page.scss
@@ -15,6 +15,6 @@
 		.selection { height: 100%; overflow-x: hidden; overflow-y: scroll; }
 		.editor { margin-top: 38px; }
 
-		.editorWrapper.isDataview { width: calc(100% - 96px); }
+		.editorWrapper.isSet { width: calc(100% - 96px); }
 	}	
 }
