--- a/src/scss/page/main/index.scss
+++ b/src/scss/page/main/index.scss
@@ -9,7 +9,7 @@
 		.icon { width: 40px; height: 40px; vertical-align: top; margin-right: 8px; border-radius: 100%; cursor: pointer; }
 		.icon:hover, .icon.active { background-color: rgba(0, 0, 0, 0.2); }
 		.icon:last-child { margin-right: 0px; }
-		.icon.user { width: 48px; height: 48px; line-height: 48px; user-select: none; }
+		.iconObject { cursor: pointer; user-select: none; }
 		.icon.profile { background-size: 18px 18px; background-image: url('~img/icon/profile.svg'); display: none; }
 	}
 
