--- a/src/scss/menu/dataview/common.scss
+++ b/src/scss/menu/dataview/common.scss
@@ -8,6 +8,7 @@
 	.menu.menuDataviewObjectType,
 	.menu.menuDataviewObjectValues,
 	.menu.menuDataviewOptionList,
+	.menu.menuDataviewOptionValues,
 	.menu.menuDataviewFilter,
 	.menu.menuDataviewSort,
 	{
