--- a/src/scss/block/dataview/cell.scss
+++ b/src/scss/block/dataview/cell.scss
@@ -7,14 +7,6 @@
 
 .cell.c-select {
 	.tagItem { margin: 0px 6px 6px 0px; vertical-align: top; }
-	.DraggableTags { display: inline; vertical-align: top; line-height: 0px; }
-	.DraggableTags::after { display: none; }
-
-	.filter { cursor: text; margin-right: 0px; height: 18px; min-width: 18px; padding: 0px; display: none; }
-	.filter {
-		#filter { -webkit-user-modify: read-write-plaintext-only; position: absolute; width: 100%; height: 100%; left: 0px; top: 0px; }
-		#placeHolder { color: $colorDarkGrey; }
-	}
 }
 
 .cell.isEditing { border-radius: 2px; }
@@ -30,13 +22,9 @@
 	}
 }
 
-.cell.isEditing.c-select {
-	.filter { display: inline-block !important; }
-}
-
-.cell.isEditing.c-object {
+.cell.isEditing.c-object, .cell.isEditing.c-select {
 	.empty { display: block; }
-	.cellContent { height: 20px !important; padding-right: 0px !important; }
+	.cellContent { height: 20px !important; padding-right: 1px !important; }
 	.wrap { height: 100%; overflow: hidden; white-space: nowrap; }
 }
 
@@ -66,19 +54,6 @@
 	.DraggableTags { display: inline; vertical-align: top; line-height: 0px; }
 	.DraggableTags::after { display: none; }
 	.DraggableTags-tag { max-width: 100%; }
-
-	.filter { cursor: text; margin-right: 0px; height: 18px; min-width: 18px; max-width: 100%; padding: 0px; display: none; }
-	.filter {
-		#filter { 
-			-webkit-user-modify: read-write-plaintext-only; position: absolute; width: 100%; height: 100%; left: 0px; top: 0px; 
-			word-wrap: break-word; white-space: normal;
-		}
-		#placeHolder { color: $colorDarkGrey; width: 100%; @include text-overflow-nw;}
-	}
-	.noPlaceholder {
-		.filter #filter { position: relative; }
-		#placeHolder { display: none; }
-	}
 }
 
 .cellContent.c-object {
