--- a/src/scss/menu/dataview/object.scss
+++ b/src/scss/menu/dataview/object.scss
@@ -4,7 +4,7 @@
 
 	.menu.menuDataviewObjectList { width: 288px; }
 	.menu.menuDataviewObjectList {
-		.content { overflow: visible; transition: none; }
+		.content { padding-bottom: 0px; transition: none; }
 		.wrap { height: 100%; display: flex; flex-direction: column; }
 
 		.items { height: calc(100% - 34px); }
