--- a/src/scss/component/iconObject.scss
+++ b/src/scss/component/iconObject.scss
@@ -88,7 +88,7 @@
 		.emoji-mart-emoji { span { height: 36px; line-height: 36px; } }
 	}
 
-	.iconEmoji.iconCheckbox.canEdit { cursor: pointer; }
+	.iconCheckbox.canEdit { cursor: pointer; }
 
 	.iconEmoji.canEdit { cursor: pointer; transition: background-color 0.05s ease-in-out; }
 	.iconEmoji.canEdit.c48:hover, .iconEmoji.canEdit.c64:hover { background-color: #ebe9e0; }
