--- a/src/scss/menu/dataview/common.scss
+++ b/src/scss/menu/dataview/common.scss
@@ -18,9 +18,8 @@
 			.icon.dnd { margin-right: 2px; }
 		}
 
-		.item.empty { color: #6c6a5f; padding: 8px 16px 12px 16px; line-height: 22px; cursor: default; }
-
-		.item.empty { color: #6c6a5f; padding: 8px 16px 12px 16px; line-height: 22px; cursor: default; }
+		.item.empty { color: #6c6a5f; padding: 8px 16px 10px 16px; line-height: 22px; cursor: default; }
+		.item.empty:hover::before { opacity: 0; }
 
 		.item.add { color: $colorDarkGrey; line-height: 20px; }
 		.item.add:hover { color: $colorBlack; }
