--- a/src/scss/menu/dataview/common.scss
+++ b/src/scss/menu/dataview/common.scss
@@ -33,7 +33,7 @@
     .menu.menuDataviewRelationList, 
     .menu.menuDataviewFilter,
     .menu.menuDataviewSort {
-		.select > .current > .name { max-width: 102px; }
+		.select > .name { max-width: 102px; }
     }
 
     .menu.menuDataviewFilter,
