--- a/src/scss/menu/dataview/object.scss
+++ b/src/scss/menu/dataview/object.scss
@@ -47,4 +47,10 @@
 			.icon.delete { opacity: 1; }
 		}
 	}
+
+	.menu.menuDataviewObjectValues.fromFilter {
+		.item {
+			.icon.dnd { display: none; }
+		}
+	}
 }
