--- a/src/scss/block/text.scss
+++ b/src/scss/block/text.scss
@@ -131,9 +131,11 @@
 	.block.blockText.code > .wrapContent > .selectable > .dropTarget > .flex { position: static; } 
 	.block.blockText.code {
 		.value { font-family: 'Plex'; @include text-common; tab-size: 4; }
-		.select { position: absolute; top: 9px; left: 16px; z-index: 1; border: 0px;  color: $colorDarkGrey; @include text-common; border-radius: 0px; }
+		.select { 
+			position: absolute; top: 9px; left: 16px; z-index: 1; border: 0px;  color: $colorDarkGrey; @include text-common; border-radius: 0px; 
+			padding: 0px 20px 0px 0px;
+		}
 		.select {
-			.current { padding: 0px 20px 0px 0px; }
 			.name { overflow: visible; }
 		}
 		.select:hover, .select.active { background: none; }
