split select relation into tag and status

--- a/src/scss/menu/dataview/option.scss
+++ b/src/scss/menu/dataview/option.scss
@@ -1,6 +1,16 @@
 @import "~scss/_vars";
 
 .menus {
+
+	.menu.menuDataviewOptionValues {
+		.item {
+			.icon.delete { opacity: 0; }
+		}
+		.item.hover {
+			.icon.delete { opacity: 1; }
+		}
+	}
+
 	.menu.menuDataviewOptionList { width: 288px; }
 	.menu.menuDataviewOptionList {
 		.content { transition: none; padding-bottom: 0px; }
@@ -9,7 +19,8 @@
 		}
 
 		.items { height: calc(100% - 34px); }
-		.item:hover::before { opacity: 0.15; }
+		.item.hover::before { opacity: 0.15; }
+
 		.tagItem { vertical-align: top; margin-top: 1px; }
 		.icon.more { position: absolute; right: 14px; top: 50%; margin-top: -10px; }
 	}
