--- a/src/scss/component/icon.scss
+++ b/src/scss/component/icon.scss
@@ -28,7 +28,8 @@
 .icon.relation.c-title { background-image: url('~img/icon/dataview/relation/title.svg'); }
 .icon.relation.c-number { background-image: url('~img/icon/dataview/relation/number.svg'); }
 .icon.relation.c-date { background-image: url('~img/icon/dataview/relation/date.svg'); }
-.icon.relation.c-select { background-image: url('~img/icon/dataview/relation/select.svg'); }
+.icon.relation.c-select.isTag { background-image: url('~img/icon/dataview/relation/tag.svg'); }
+.icon.relation.c-select.isStatus { background-image: url('~img/icon/dataview/relation/status.svg'); }
 .icon.relation.c-object { background-image: url('~img/icon/dataview/relation/object.svg'); }
 .icon.relation.c-file { background-image: url('~img/icon/dataview/relation/file.svg'); }
 .icon.relation.c-checkbox { background-image: url('~img/icon/dataview/relation/checkbox.svg'); }
