--- a/src/scss/component/tag.scss
+++ b/src/scss/component/tag.scss
@@ -13,6 +13,7 @@
 	.icon.remove:hover { background-image: url('~img/icon/dataview/tagRemove1.svg') !important; }
 }
 .tagItem.canEdit { padding-right: 18px; }
+.tagItem.isStatus { padding: 0px 8px; border-radius: 10px; }
 
 .tagItem.default { color: $colorBlack; background: #fff; box-shadow: 0px 0px 0px 1px #dfddd0 inset; }
 .tagItem.grey { color: #8c9ea5; background: #ebeff1; }
