--- a/src/scss/menu/block/common.scss
+++ b/src/scss/menu/block/common.scss
@@ -5,6 +5,9 @@
 		.item.empty { font-size: 12px; line-height: 18px; padding-top: 8px; }
 	}
 
+	.menu.menuBlockMore {
+		.item:hover::before { opacity: 0.15; }
+	}
 	.menu.menuBlockMore.fromIndex { width: 160px; }
 	
 	.menu.menuBlockAdd { width: 360px !important; }
