--- a/src/scss/menu/dataview/option.scss
+++ b/src/scss/menu/dataview/option.scss
@@ -24,4 +24,9 @@
 			.icon.dnd { display: none; }
 		}
 	}
+	.menu.menuDataviewOptionList.fromFilter {
+		.item {
+			.icon.more { display: none; }
+		}
+	}
 }
