--- a/src/scss/menu/common.scss
+++ b/src/scss/menu/common.scss
@@ -105,10 +105,13 @@
 			.name { line-height: 22px; }
 		}
 
+		.item.withCaption { display: flex; }
 		.item.withCaption {
-			.name { width: calc(100% - 112px); margin-right: 6px; }
+			.iconObject, .icon.dnd { flex-shrink: 0; }
+			.name, .clickable { width: 100%; margin-right: 6px; }
 			.caption { 
 				width: 80px; @include text-overflow-nw; display: inline-block; vertical-align: top; color: $colorDarkGrey; @include text-small; text-align: right;
+				flex-shrink: 0;
 			}
 		}
 
