--- a/src/scss/block/cover.scss
+++ b/src/scss/block/cover.scss
@@ -112,7 +112,7 @@
 .editorWrapper.isContact.withIconAndCover {
 	.block.blockCover.align0 {
 		.elements {
-			.buttons { left: 112px; }
+			.buttons { padding-left: 150px; }
 		}
 	}
 	.block.blockCover.align1 {
