--- a/src/scss/component/iconObject.scss
+++ b/src/scss/component/iconObject.scss
@@ -60,10 +60,6 @@
 			span { height: 100%; display: inline-block; vertical-align: middle; }
 		}
 		
-		.icon.archive { 
-			background-image: url('~img/icon/archive.svg'); position: absolute; left: 50%; top: 50%; 
-			width: 24px; height: 24px; margin: -12px 0px 0px -12px;
-		}
 		.icon.home.big { @include pos-abs-mid; width: 24px; height: 24px; margin: -12px 0px 0px -12px; }
 
 		.iconImage { width: 100%; height: 100%; border-radius: inherit; object-fit: cover; left: 0px; top: 0px; margin: 0px; }
@@ -117,7 +113,7 @@
 .iconObject.c32 { width: 32px; height: 32px; }
 .iconObject.c40 { width: 40px; height: 40px; }
 .iconObject.c48 { display: block; width: 48px; height: 48px; border-radius: 100%; overflow: hidden; background-color: #f3f2ec; }
-.iconObject.c48.isPage, .iconObject.c48.isFile { border-radius: 0px; background-color: unset; }
+.iconObject.c48.isPage, .iconObject.c48.isFile, .iconObject.c48.isArchive { border-radius: 0px; background-color: unset; }
 .iconObject.c64 { display: block; width: 64px; height: 64px; border-radius: 100%; overflow: hidden; background-color: #f3f2ec; }
 .iconObject.c96 { display: block; width: 96px; height: 96px; border-radius: 20px; overflow: hidden; background-color: #f3f2ec; }
 .iconObject.c128 { display: block; width: 128px; height: 128px; border-radius: 20px; overflow: hidden; background-color: #f3f2ec; }
