--- a/src/scss/menu/thread.scss
+++ b/src/scss/menu/thread.scss
@@ -2,7 +2,7 @@
 
 .menus {
 	.menu.menuThreadList,
-	.menu.menuThreadStatus { width: 320px; position: fixed; }
+	.menu.menuThreadStatus { width: 320px; }
 
 	.menu.menuThreadList,
 	.menu.menuThreadStatus {
@@ -23,7 +23,7 @@
 		.item { padding: 5px 16px; }
 	}
 
-	.menu.menuThreadList { width: 272px; top: 42px !important; }
+	.menu.menuThreadList { width: 272px; }
 	.menu.menuThreadList {
 		.content { padding: 0px; }
 		.item { padding: 11px 16px; border-bottom: 1px solid #eae9e0;}
