--- a/src/scss/menu/common.scss
+++ b/src/scss/menu/common.scss
@@ -1,7 +1,8 @@
 @import "~scss/_vars";
 
 .menus {
-	.menuWrap { position: absolute; left: 0px; top: 0px; width: 100%; z-index: 102; }
+	.menuWrap { position: absolute; left: 0px; top: 0px; width: 100%; z-index: 19; }
+	.menuWrap.fromPopup { z-index: 103; }
 
 	.dimmer { position: fixed; left: 0px; top: 0px; width: 100%; height: 100%; background: rgba(0,0,0,0); }
 	#menu-polygon { z-index: 1000; position: absolute; }
@@ -9,7 +10,7 @@
 	.menu * { user-select: none; }
 	
 	.menu { 
-		border-radius: 8px; color: $colorBlack; position: absolute; z-index: 103; text-align: left; 
+		border-radius: 8px; color: $colorBlack; position: absolute; z-index: inherit; text-align: left; 
 		box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.2); background: #fff; opacity: 0; transform: scale3d(0.8,0.8,1);
 		transition: opacity 0.05s ease-in-out, transform 0.05s ease-in-out;
 	}
