--- a/src/scss/menu/common.scss
+++ b/src/scss/menu/common.scss
@@ -46,8 +46,15 @@
 		
 		.filter { padding: 3px 14px 0px 14px; }
 		.filter {
-			.input { padding: 0px; height: 22px; line-height: 22px; vertical-align: top; border: 0px; }
+			.inner { position: relative; width: 100%; height: 100%; }
+			.input { padding: 0px; height: 22px; line-height: 22px; vertical-align: top; border: 0px; width: calc(100% - 24px); }
+			.icon.clear { 
+				width: 20px; height: 20px; background-image: url('~img/icon/clear0.svg'); position: absolute; right: 0px; top: 50%;
+				margin-top: -10px; cursor: pointer; opacity: 0;
+			}
+			.icon.clear:hover { background-image: url('~img/icon/clear1.svg'); }
 		}
+		.filter.active { .icon.clear { opacity: 1; } }
 		.filter::after {
 			content: ""; height: 1px; margin: 8px 0px 0px 0px; background: $colorLightGrey; display: block;
 		}
