--- a/src/scss/menu/select.scss
+++ b/src/scss/menu/select.scss
@@ -2,7 +2,7 @@
 
 .menus {
 	.menu.menuSelect {
-		.content { transition: none; padding: 0px; overflow: hidden; }
+		.content { transition: none; padding: 8px 0px 0px 0px; overflow: hidden; }
 		.items { height: 100%; }
 
 		.item.initial { padding: 2px 16px; line-height: 18px; margin-bottom: 2px; }
