--- a/src/scss/menu/select.scss
+++ b/src/scss/menu/select.scss
@@ -4,6 +4,7 @@
 	.menu.menuSelect {
 		.content { transition: none; padding: 8px 0px 0px 0px; overflow: hidden; }
 		.items { height: 100%; }
+		.item.empty { margin-top: 4px; }
 
 		.item.initial { padding: 2px 16px; line-height: 18px; margin-bottom: 2px; }
 		.item.initial {
